[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/player/ui/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/texts/Righteous-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="Animation" id=1]
resource_name = "goop"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.054902, 1, 0, 0.517647 ), Color( 0.882353, 0.768627, 0.0235294, 0.207843 ), Color( 0.313726, 1, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1284.0
margin_bottom = 725.0
color = Color( 0.313726, 1, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/goop = SubResource( 1 )

[node name="HUD" type="Node2D" parent="."]

[node name="hpLabel" type="Label" parent="HUD"]
margin_left = 12.0
margin_top = 605.316
margin_right = 142.0
margin_bottom = 658.316
custom_fonts/font = SubResource( 2 )
text = "HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammoLabel" type="Label" parent="HUD"]
margin_left = 12.0
margin_top = 656.258
margin_right = 165.0
margin_bottom = 709.258
custom_fonts/font = SubResource( 2 )
text = "AMMO: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hurtTween" type="Tween" parent="."]

[node name="returnHurtTween" type="Tween" parent="."]
